@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/binutils-2.19.1-r1.ebuild,v 1.6 2010/02/03 20:08:26 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/binutils-2.19.1-r1.ebuild,v 1.7 2011/03/11 06:52:40 vapier Exp $
 
 PATCHVER="1.2"
 ELF2FLT_VER=""
